I am not yet able to open the test browser as admin, so tests relying on that fail. A minor layout issue (with forms and the "featured videos" is now fixed.

--- a/on/video/static/videolisting.css
+++ b/on/video/static/videolisting.css
@@ -67,8 +67,10 @@ margin-top: 10px;
 /* portlet layout */
 
 .portletFeaturedVideo {
+  /*position it centered under the content */                        
   height: 138px;
   margin: 0 30%;
+  clear: both;
 }
 
 .portletFeaturedVideo featuredVideos {
